--- a/templates/base-network-infra.yaml
+++ b/templates/base-network-infra.yaml
@@ -105,62 +105,12 @@ Resources:
       RouteTableId:
         Ref: PrivateSubnetRouteTable
 
-  #------
-  # nat
-  #------
-
-  NATSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupName: NATSG
-      GroupDescription: sg for nat in public subnet
-      Tags:
-      - Key: Name
-        Value: sg-nat
-      VpcId:
-        Ref: MainVpc
-      SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: 80
-        ToPort: 80
-        CidrIp: 10.0.2.0/24
-      - IpProtocol: tcp
-        FromPort: 443
-        ToPort: 443
-        CidrIp: 10.0.2.0/24
-      - IpProtocol: tcp
-        FromPort: 22
-        ToPort: 22
-        CidrIp: 0.0.0.0/0
-      SecurityGroupEgress:
-      - IpProtocol: tcp
-        FromPort: 80
-        ToPort: 80
-        CidrIp: 0.0.0.0/0
-      - IpProtocol: tcp
-        FromPort: 443
-        ToPort: 443
-        CidrIp: 0.0.0.0/0
-
-  NATInstance:
-    Type: AWS::EC2::Instance
-    DependsOn: MainInternetGateway
-    Properties:
-      AvailabilityZone: us-east-1a
-      ImageId: ami-258e1f33
-      InstanceType: t2.micro
-      KeyName: aws-wes-kp
-      NetworkInterfaces:
-      - AssociatePublicIpAddress: true
-        DeleteOnTermination: true
-        Description: nat public ip network interface
-        DeviceIndex: 0
-        GroupSet:
-          - Ref: NATSecurityGroup
-        SubnetId:
-          Ref: PublicSubnet
-      SourceDestCheck: false
-      Tags:
-      - Key: Name
-        Value: nat
-      Tenancy: default
+Outputs:
+  MainVpc:
+    Value: !Ref MainVpc
+    Export:
+      Name: !Sub "${AWS::StackName}-MainVpc"
+  PublicSubnet:
+    Value: !Ref PublicSubnet
+    Export:
+      Name: !Sub "${AWS::StackName}-PublicSubnet"
