--- a/templates/base-network-infra.yaml
+++ b/templates/base-network-infra.yaml
@@ -1,4 +1,14 @@
 AWSTemplateFormatVersion: 2010-09-09
+
+Parameters:
+
+  MainVpcCidrBlock:
+    Type: String
+  PublicSubnetCidrBlock:
+    Type: String
+  PrivateSubnetCidrBlock:
+    Type: String
+
 Resources:
 
   #------------------------------
@@ -8,7 +18,8 @@ Resources:
   MainVpc:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: 10.1.0.0/16
+      CidrBlock:
+        Ref: MainVpcCidrBlock
       EnableDnsSupport: false
       EnableDnsHostnames: false
       InstanceTenancy: default
@@ -40,8 +51,8 @@ Resources:
     Properties:
       VpcId:
         Ref: MainVpc
-      CidrBlock: 10.1.1.0/24
-      AvailabilityZone: us-east-1a
+      CidrBlock:
+        Ref: PublicSubnetCidrBlock
       Tags:
       - Key: Name
         Value: public-subnet
@@ -82,8 +93,8 @@ Resources:
     Properties:
       VpcId:
         Ref: MainVpc
-      CidrBlock: 10.1.2.0/24
-      AvailabilityZone: us-east-1a
+      CidrBlock:
+        Ref: PrivateSubnetCidrBlock
       Tags:
       - Key: Name
         Value: private-subnet
@@ -106,6 +117,7 @@ Resources:
         Ref: PrivateSubnetRouteTable
 
 Outputs:
+
   MainVpc:
     Value: !Ref MainVpc
     Export:
@@ -114,3 +126,19 @@ Outputs:
     Value: !Ref PublicSubnet
     Export:
       Name: !Sub "${AWS::StackName}-PublicSubnet"
+  PrivateSubnet:
+    Value: !Ref PrivateSubnet
+    Export:
+      Name: !Sub "${AWS::StackName}-PrivateSubnet"
+  MainVpcCidrBlock:
+    Value: !Ref MainVpcCidrBlock
+    Export:
+      Name: !Sub "${AWS::StackName}-MainVpcCidrBlock"
+  PublicSubnetCidrBlock:
+    Value: !Ref PublicSubnetCidrBlock
+    Export:
+      Name: !Sub "${AWS::StackName}-PublicSubnetCidrBlock"
+  PrivateSubnetCidrBlock:
+    Value: !Ref PrivateSubnetCidrBlock
+    Export:
+      Name: !Sub "${AWS::StackName}-PrivateSubnetCidrBlock"
